# 2024FA-CSCI-36-Inventory-System

./: .gitignore  README.md  heroicons-react-solid.d.ts  package-lock.json  package.json  tsconfig.json
docker/: CMakeLists.txt  DataSyncMagnr.cpp  Dockerfile  README.md  \  mySQLref.sql
docker/.cache/clangd/index/: MySQLDB.cpp.03573CAFAF17EA21.idx  MySQLDB.h.2ABA9961571326A6.idx  ObjectNode.cpp.E4D9A1966C6F60A4.idx  ObjectNode.h.01FF55461E88AA8D.idx  TinySHA1.hpp.8DBF319BD042D377.idx  app.h.53D5E7FF010F86E6.idx  build_config.h.C00485834C4D63BB.idx  callback.h.0EB79454A09ED7D0.idx  ci_map.h.F1B76A2ED94C1AEE.idx  common.h.6201A48D92F8B00D.idx  compression.h.53042DA9F3755DAF.idx  config.h.7EFD218CFE513608.idx  connection.h.E781701B7B4B4028.idx  crow.h.E45630CC7D6E52BE.idx  database.cpp.5098CEAA611A5865.idx  database.h.EEE71A421A42E552.idx  datatype.h.8938A9366B537CE9.idx  driver.h.302B7ABA32014872.idx  exception.h.A44ACEB12B131494.idx  http_connection.h.CC1CA609AF1C9F94.idx  http_parser_merged.h.4B306D643ACC0C88.idx  http_request.h.4E271F04AD874AD3.idx  http_response.h.BF31D264A9D33AC6.idx  http_server.h.0DAD0482A1EC1D41.idx  json.h.0E6DCF013012A0E2.idx  logging.h.861BA7CF9B85D7E0.idx  main.cpp.B323FAAB581AAF61.idx  middleware.h.EC7E71FAE2DE595C.idx  middleware_context.h.32AC779992E09086.idx  mime_types.h.9217CCF3C834440A.idx  multipart.h.2DE51F0B18FAB8DE.idx  multipart_view.h.FE5C8E966B0439D1.idx  (+22 more)
docker/include/: DataSyncMagnr.cpp  DataSyncMagnr.h  MySQLDB.cpp  MySQLDB.h  ObjectNode.cpp  ObjectNode.h
docker/src/: main.cpp  routes.cpp  routes.h
src/app/: layout.tsx  (+1 more)
(+9 files in other folders)
